# rynaty

./: .gitattributes  .gitignore  .replit  APPROVALS_LIBRARY_FINANCE_SECRETARY_AUDIT.md  APPROVALS_LIBRARY_FINANCE_SECRETARY_TASK_PLAN.md  CRITIQUE_AND_ACTIONS.md  FINANCE_COMMUNICATION_ALIGNMENT_PLAN.md  FINANCE_PHASE6_POST_CLOSE_RUNBOOK.md  FINANCE_PHASE6_TEST_ENV.md  FINANCE_PORTAL_AUDIT.md  IMPLEMENTATION_CHECKLIST.md  NEXT_PHASE_TASK_REGISTER.md  PAYMENTS_MASTER_AUDIT.md  PAYMENTS_MASTER_TASK_PLAN.md  PAYMENT_ENDPOINTS_REFERENCE.md  PAYMENT_SYSTEMS_AUDIT.md  PAYMENT_SYSTEMS_FASTTRACK_PLAN.md  PAYMENT_SYSTEMS_LAUNCH_EVIDENCE.md  PAYMENT_SYSTEMS_SECOND_AUDIT.md  PAYMENT_SYSTEMS_TASK_PLAN.md  QUICKSTART.md  REPLIT_AGENT_DATA_IMPORT_GUIDE.md  SUPER_ADMIN_TENANT_PAYMENTS_AUDIT.md  SUPER_ADMIN_TENANT_PAYMENTS_TASK_PLAN.md  SYNC_RECONCILIATION_GUIDE.md  WORKSPACE_HYGIENE.md  enforce-pnpm.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  task.md
.agents/: agent_assets_metadata.toml
artifacts/: run_local_demo_server.ps1
attached_assets/: .env_1776353570131.example  DEPLOYMENT_GUIDE_1776353570132.md  RynatySpace-BusinessCard_1775634380980.html  SmartCampus_SuperAdmin_Spec_1776271963249.docx
docs/: approvals_rollout_runbook.md  finance_test_report.md  payments_launch_runbook.md  payments_phase5_go_no_go.md
marketing/: brochure.html
sms-backend/: AWS_TOKEN_SECURITY_NOTE.txt  manage.py  render_start.sh  requirements.txt  start.sh
tools/: cleanup_local_artifacts.ps1  manage_phase6_test_postgres.ps1  run_finance_phase6_tests.ps1  (+1 more)
(+819 files in other folders)
