[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django==4.2.7",
    "django-cors-headers==4.4.0",
    "django-tenants==3.5.0",
    "djangorestframework==3.14.0",
    "djangorestframework-simplejwt==5.3.0",
    "gunicorn==21.2.0",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "reportlab==4.2.2",
    "setuptools>=82.0.1",
    "whitenoise==6.12.0",
]
